fixed hero photo and white space for phone and desktop

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="subtitle">MY PROFESSIONAL JOURNEY</div>
             <h2>Experience</h2>
             
-            <!-- Horizontal Timeline -->
+            <!-- Horizontal Timeline (unchanged) -->
             <div class="horizontal-timeline">
                 <div class="horizontal-timeline-items">
                     <div class="horizontal-timeline-item" data-index="0">
@@ -142,58 +142,61 @@
                 <div class="horizontal-timeline-line"></div>
             </div>
 
-            <!-- Vertical Timeline -->
+            <!-- Vertical Timeline (chronological newest to oldest) -->
             <div class="timeline">
+                <!-- UW Research (Current - Green dot) -->
                 <div class="timeline-item fade-in" data-timeline-index="0">
-                    <div class="timeline-dot"></div>
+                    <div class="timeline-dot current"></div>
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <div class="timeline-left">
-                                <img src="images/kpmg-logo.jpg" alt="KPMG Logo" class="timeline-logo">
+                                <img src="images/uw logo.jpg" alt="UW-Madison Logo" class="timeline-logo">
                                 <div class="timeline-text">
-                                    <h3>Seasonal Advisory Intern</h3>
-                                    <div class="timeline-company">KPMG</div>
+                                    <h3>Undergraduate Research Assistant</h3>
+                                    <div class="timeline-company">University of Wisconsin, Madison</div>
                                 </div>
                             </div>
-                            <div class="timeline-date">May 2023</div>
+                            <div class="timeline-date">September 2024 - Present</div>
                         </div>
                         <div class="timeline-description">
-                            Investigated innovative technological solutions to support net-zero carbon footprint goals. Developed presentations using Power BI and wireframed sustainability apps.
+                            Engaged in advancing autonomous humanoid robots through cutting-edge motion and decision-making technologies. Contributing to robotic motion analysis using SimRobot and developing hand gesture detection systems for referees using MediaPipe.
                         </div>
                         <div class="timeline-skills">
-                            <span class="timeline-skill">Power BI</span>
-                            <span class="timeline-skill">Figma</span>
-                            <span class="timeline-skill">Sustainability</span>
-                            <span class="timeline-skill">Data Analysis</span>
+                            <span class="timeline-skill">SimRobot</span>
+                            <span class="timeline-skill">MediaPipe</span>
+                            <span class="timeline-skill">Machine Learning</span>
+                            <span class="timeline-skill">Robotics</span>
                         </div>
                     </div>
                 </div>
 
+                <!-- Snap Inc -->
                 <div class="timeline-item fade-in" data-timeline-index="1">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <div class="timeline-left">
-                                <img src="images/uic-logo.jpg" alt="UIC Logo" class="timeline-logo">
+                                <img src="images/snapinclogo.jpg" alt="Snap Inc Logo" class="timeline-logo">
                                 <div class="timeline-text">
-                                    <h3>Undergraduate Research Assistant</h3>
-                                    <div class="timeline-company">University of Illinois, Chicago</div>
+                                    <h3>Augmented Reality Extern</h3>
+                                    <div class="timeline-company">Snap Inc.</div>
                                 </div>
                             </div>
-                            <div class="timeline-date">February 2024 - May 2024</div>
+                            <div class="timeline-date">September 2024 - November 2024</div>
                         </div>
                         <div class="timeline-description">
-                            Contributed to developing a digital twin for managing nuclear waste using Codesys and Unreal Engine. Enhanced simulation code and improved real-time TCP/IP communication.
+                            Worked on cutting-edge AR technologies and immersive experiences, contributing to the development of innovative augmented reality solutions and interactive digital experiences.
                         </div>
                         <div class="timeline-skills">
-                            <span class="timeline-skill">Unreal Engine</span>
-                            <span class="timeline-skill">Codesys</span>
-                            <span class="timeline-skill">TCP/IP</span>
-                            <span class="timeline-skill">Digital Twin</span>
+                            <span class="timeline-skill">AR Development</span>
+                            <span class="timeline-skill">Lens Studio</span>
+                            <span class="timeline-skill">Computer Vision</span>
+                            <span class="timeline-skill">3D Graphics</span>
                         </div>
                     </div>
                 </div>
 
+                <!-- AbbVie -->
                 <div class="timeline-item fade-in" data-timeline-index="2">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
@@ -219,52 +222,54 @@
                     </div>
                 </div>
 
+                <!-- UIC Research -->
                 <div class="timeline-item fade-in" data-timeline-index="3">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <div class="timeline-left">
-                                <img src="images/snapinclogo.jpg" alt="Snap Inc Logo" class="timeline-logo">
+                                <img src="images/uic-logo.jpg" alt="UIC Logo" class="timeline-logo">
                                 <div class="timeline-text">
-                                    <h3>Augmented Reality Extern</h3>
-                                    <div class="timeline-company">Snap Inc.</div>
+                                    <h3>Undergraduate Research Assistant</h3>
+                                    <div class="timeline-company">University of Illinois, Chicago</div>
                                 </div>
                             </div>
-                            <div class="timeline-date">September 2024 - November 2024</div>
+                            <div class="timeline-date">February 2024 - May 2024</div>
                         </div>
                         <div class="timeline-description">
-                            Worked on cutting-edge AR technologies and immersive experiences, contributing to the development of innovative augmented reality solutions and interactive digital experiences.
+                            Contributed to developing a digital twin for managing nuclear waste using Codesys and Unreal Engine. Enhanced simulation code and improved real-time TCP/IP communication.
                         </div>
                         <div class="timeline-skills">
-                            <span class="timeline-skill">AR Development</span>
-                            <span class="timeline-skill">Lens Studio</span>
-                            <span class="timeline-skill">Computer Vision</span>
-                            <span class="timeline-skill">3D Graphics</span>
+                            <span class="timeline-skill">Unreal Engine</span>
+                            <span class="timeline-skill">Codesys</span>
+                            <span class="timeline-skill">TCP/IP</span>
+                            <span class="timeline-skill">Digital Twin</span>
                         </div>
                     </div>
                 </div>
 
+                <!-- KPMG -->
                 <div class="timeline-item fade-in" data-timeline-index="4">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <div class="timeline-left">
-                                <img src="images/uw logo.jpg" alt="UW-Madison Logo" class="timeline-logo">
+                                <img src="images/kpmg-logo.jpg" alt="KPMG Logo" class="timeline-logo">
                                 <div class="timeline-text">
-                                    <h3>Undergraduate Research Assistant</h3>
-                                    <div class="timeline-company">University of Wisconsin, Madison</div>
+                                    <h3>Seasonal Advisory Intern</h3>
+                                    <div class="timeline-company">KPMG</div>
                                 </div>
                             </div>
-                            <div class="timeline-date">September 2024 - Present</div>
+                            <div class="timeline-date">May 2023</div>
                         </div>
                         <div class="timeline-description">
-                            Engaged in advancing autonomous humanoid robots through cutting-edge motion and decision-making technologies. Contributing to robotic motion analysis using SimRobot and developing hand gesture detection systems for referees using MediaPipe.
+                            Investigated innovative technological solutions to support net-zero carbon footprint goals. Developed presentations using Power BI and wireframed sustainability apps.
                         </div>
                         <div class="timeline-skills">
-                            <span class="timeline-skill">SimRobot</span>
-                            <span class="timeline-skill">MediaPipe</span>
-                            <span class="timeline-skill">Machine Learning</span>
-                            <span class="timeline-skill">Robotics</span>
+                            <span class="timeline-skill">Power BI</span>
+                            <span class="timeline-skill">Figma</span>
+                            <span class="timeline-skill">Sustainability</span>
+                            <span class="timeline-skill">Data Analysis</span>
                         </div>
                     </div>
                 </div>
