added leadership and changed about me photo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#portfolio" class="nav-link">Projects</a></li>
+                <li><a href="#leadership" class="nav-link">Leadership</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation menu">
@@ -357,6 +358,99 @@
                             <span class="tech-tag">UI/UX</span>
                             <span class="tech-tag">Sustainability</span>
                         </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <!-- Leadership Section -->
+    <section id="leadership" class="leadership">
+        <div class="leadership-container fade-in">
+            <div class="subtitle">BUILDING COMMUNITIES & LEADING TEAMS</div>
+            <h2>Leadership & Extracurriculars</h2>
+            <div class="leadership-grid">
+                <article class="leadership-item">
+                    <div class="leadership-icon">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3>President</h3>
+                    <div class="leadership-org">Association for Computing Machinery (ACM)</div>
+                    <p>Leading the largest computer science organization on campus, organizing tech talks, hackathons, and networking events. Managing a team of 15+ board members and coordinating with industry partners.</p>
+                    <div class="leadership-skills">
+                        <span class="leadership-skill">Team Leadership</span>
+                        <span class="leadership-skill">Event Planning</span>
+                        <span class="leadership-skill">Public Speaking</span>
+                    </div>
+                </article>
+
+                <article class="leadership-item">
+                    <div class="leadership-icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                    </div>
+                    <h3>Vice President of Education</h3>
+                    <div class="leadership-org">Women in Computing</div>
+                    <p>Developing educational programs and workshops to support women in technology. Creating mentorship programs and organizing technical skill-building sessions for 200+ members.</p>
+                    <div class="leadership-skills">
+                        <span class="leadership-skill">Curriculum Design</span>
+                        <span class="leadership-skill">Mentorship</span>
+                        <span class="leadership-skill">Workshop Facilitation</span>
+                    </div>
+                </article>
+
+                <article class="leadership-item">
+                    <div class="leadership-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h3>Technical Director</h3>
+                    <div class="leadership-org">HackUW Organizing Committee</div>
+                    <p>Managing technical infrastructure for Wisconsin's largest hackathon with 500+ participants. Overseeing registration systems, judging platforms, and technical workshops.</p>
+                    <div class="leadership-skills">
+                        <span class="leadership-skill">Project Management</span>
+                        <span class="leadership-skill">System Architecture</span>
+                        <span class="leadership-skill">Problem Solving</span>
+                    </div>
+                </article>
+
+                <article class="leadership-item">
+                    <div class="leadership-icon">
+                        <i class="fas fa-handshake"></i>
+                    </div>
+                    <h3>Community Outreach Coordinator</h3>
+                    <div class="leadership-org">CS Student Advisory Board</div>
+                    <p>Bridging communication between students and faculty to improve the CS program. Organizing feedback sessions and representing student interests in curriculum decisions.</p>
+                    <div class="leadership-skills">
+                        <span class="leadership-skill">Communication</span>
+                        <span class="leadership-skill">Advocacy</span>
+                        <span class="leadership-skill">Stakeholder Management</span>
+                    </div>
+                </article>
+
+                <article class="leadership-item">
+                    <div class="leadership-icon">
+                        <i class="fas fa-robot"></i>
+                    </div>
+                    <h3>Research Team Lead</h3>
+                    <div class="leadership-org">Robotics Research Group</div>
+                    <p>Leading a team of undergraduate researchers in developing autonomous robot navigation systems. Coordinating research efforts and presenting findings at academic conferences.</p>
+                    <div class="leadership-skills">
+                        <span class="leadership-skill">Research Leadership</span>
+                        <span class="leadership-skill">Technical Writing</span>
+                        <span class="leadership-skill">Conference Presentations</span>
+                    </div>
+                </article>
+
+                <article class="leadership-item">
+                    <div class="leadership-icon">
+                        <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <h3>Peer Tutor</h3>
+                    <div class="leadership-org">CS Department Tutoring Center</div>
+                    <p>Providing academic support for core computer science courses including Data Structures, Algorithms, and Software Engineering. Helping 50+ students per semester improve their understanding.</p>
+                    <div class="leadership-skills">
+                        <span class="leadership-skill">Teaching</span>
+                        <span class="leadership-skill">Patience</span>
+                        <span class="leadership-skill">Technical Explanation</span>
                     </div>
                 </article>
             </div>
