--- a/index.html
+++ b/index.html
@@ -344,9 +344,6 @@
                                     <a href="https://github.com/erikasy/simrobot-enhancement" class="project-btn github" target="_blank" aria-label="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="/research/simrobot-paper.pdf" class="project-btn paper" target="_blank" aria-label="View research paper">
-                                        <i class="fas fa-file-alt"></i>
-                                    </a>
                                 </div>
                             </div>
                             <p class="project-description">
@@ -382,9 +379,6 @@
                                 <div class="project-links">
                                     <a href="https://github.com/erikasy/virtual-whiteboard" class="project-btn github" target="_blank" aria-label="View GitHub repository">
                                         <i class="fab fa-github"></i>
-                                    </a>
-                                    <a href="https://virtual-whiteboard-demo.netlify.app" class="project-btn demo" target="_blank" aria-label="View live demo">
-                                        <i class="fas fa-external-link-alt"></i>
                                     </a>
                                 </div>
                             </div>
@@ -458,9 +452,6 @@
                                     <a href="https://github.com/erikasy/eco-travel-app" class="project-btn github" target="_blank" aria-label="View GitHub repository">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="https://www.figma.com/proto/eco-travel" class="project-btn demo" target="_blank" aria-label="View Figma prototype">
-                                        <i class="fab fa-figma"></i>
-                                    </a>
                                 </div>
                             </div>
                             <p class="project-description">
@@ -532,9 +523,6 @@
                                 <div class="project-links">
                                     <a href="https://github.com/erikasy/course-planner" class="project-btn github" target="_blank" aria-label="View GitHub repository">
                                         <i class="fab fa-github"></i>
-                                    </a>
-                                    <a href="https://uw-course-planner.herokuapp.com" class="project-btn demo" target="_blank" aria-label="View live application">
-                                        <i class="fas fa-external-link-alt"></i>
                                     </a>
                                 </div>
                             </div>
@@ -641,6 +629,9 @@
                                 </a>
                                 <a href="https://linkedin.com/company/wic-uw" class="social-btn linkedin" target="_blank" aria-label="WiC LinkedIn">
                                     <i class="fab fa-linkedin"></i>
+                                </a>
+                                <a href="https://wic.cs.wisc.edu" class="social-btn website" target="_blank" aria-label="WiC Website">
+                                    <i class="fas fa-globe"></i>
                                 </a>
                             </div>
                         </div>
